feat: update footer, blog, README

--- a/src/_posts/2023-09-14-todo.md
+++ b/src/_posts/2023-09-14-todo.md
@@ -7,4 +7,8 @@ categories: todo
 
 List of To-Do items for the Bridgetown Excellent starter template:
 
-- [ ] embed SVG files in-line
+- [ ] Embed SVG files in-line.
+- [x] add [Render](https://render.com/) hosting.
+- [ ] Activate/load `lite-youtube` only with `youtue: true` in front-matter.
+- [x] Open external links in a new tab/window.
+- [ ] Create basic components/layouts.
