--- a/src/_posts/2024-01-17-elements.md
+++ b/src/_posts/2024-01-17-elements.md
@@ -7,7 +7,7 @@ categories: updates
 ---
 
   <!-- Preview -->
-  <section id="preview">
+  <section id="preview" class="flow">
     <h2>Preview</h2>
     <p>
       Sed ultricies dolor non ante vulputate hendrerit. Vivamus sit amet suscipit sapien. Nulla
@@ -44,7 +44,7 @@ categories: updates
   <!-- ./ Preview -->
 
   <!-- Typography-->
-  <section id="typography">
+  <section id="typography" class="flow">
     <h2>Typography</h2>
     <p>
       Aliquam lobortis vitae nibh nec rhoncus. Morbi mattis neque eget efficitur feugiat.
@@ -126,22 +126,11 @@ categories: updates
       hendrerit ligula semper id. Nunc risus felis, egestas eu tristique eget, convallis in
       velit.
     </p>
-    <!-- Medias-->
-    <figure>
-      <img
-        src="img/aleksandar-jason-a562ZEFKW8I-unsplash-2000x1000.jpg"
-        alt="Minimal landscape"
-      />
-      <figcaption>
-        Image from
-        <a href="https://unsplash.com/photos/a562ZEFKW8I" target="_blank">unsplash.com</a>
-      </figcaption>
-    </figure>
   </section>
   <!-- ./ Typography-->
 
   <!-- Buttons-->
-  <section id="buttons">
+  <section id="buttons" class="flow">
     <h2>Buttons</h2>
     <p class="grid">
       <button>Primary</button>
@@ -157,7 +146,7 @@ categories: updates
   <!-- ./ Buttons -->
 
   <!-- Form elements-->
-  <section id="form">
+  <section id="form" class="flow">
     <form>
       <h2>Form elements</h2>
 
@@ -280,7 +269,7 @@ categories: updates
   <!-- ./ Form elements-->
 
   <!-- Tables -->
-  <section id="tables">
+  <section id="tables" class="flow">
     <h2>Tables</h2>
     <div class="overflow-auto">
       <table class="striped">
@@ -333,17 +322,8 @@ categories: updates
   </section>
   <!-- ./ Tables -->
 
-  <!-- Modal -->
-  <section id="modal">
-    <h2>Modal</h2>
-    <button class="contrast" data-target="modal-example" onclick="toggleModal(event)">
-      Launch demo modal
-    </button>
-  </section>
-  <!-- ./ Modal -->
-
   <!-- Accordions -->
-  <section id="accordions">
+  <section id="accordions" class="flow">
     <h2>Accordions</h2>
     <details>
       <summary>Accordion 1</summary>
@@ -369,7 +349,7 @@ categories: updates
   <!-- ./ Accordions -->
 
   <!-- Article-->
-  <article id="article">
+  <article id="article" class="flow">
     <h2>Article</h2>
     <p>
       Nullam dui arcu, malesuada et sodales eu, efficitur vitae dolor. Sed ultricies dolor non
@@ -384,7 +364,7 @@ categories: updates
   <!-- ./ Article-->
 
   <!-- Group -->
-  <section id="group">
+  <section id="group" class="flow">
     <h2>Group</h2>
     <form>
       <fieldset role="group">
@@ -394,18 +374,3 @@ categories: updates
     </form>
   </section>
   <!-- ./ Group -->
-
-  <!-- Progress -->
-  <section id="progress">
-    <h2>Progress bar</h2>
-    <progress id="progress-1" value="25" max="100"></progress>
-    <progress id="progress-2"></progress>
-  </section>
-  <!-- ./ Progress -->
-
-  <!-- Loading -->
-  <section id="loading">
-    <h2>Loading</h2>
-    <article aria-busy="true"></article>
-    <button aria-busy="true">Please wait…</button>
-  </section>
